--- a/Apr/2024-04-26.md
+++ b/Apr/2024-04-26.md
@@ -79,6 +79,28 @@ json의 post id를 받고, 라우터를 통해 post.html을 전달, 브라우저
 
 ![image](./images/2024-04-26-02.png)
 
+##### 다른 예시로 살펴보는 경로 차이 파악
+
+게시글 상세 조회(post)에서 게시글 목록 조회(posts)로 이동하는 예시로 다른 상대 경로들을 비교해 보겠습니다.
+
+```html
+<a href="posts">1. 아무 말 대잔치 posts</a>
+<a href="/posts">2. 아무 말 대잔치 /posts</a>
+<a href="./posts">3. 아무 말 대잔치 ./posts</a>
+<a href="posts.html">4. 아무 말 대잔치 posts.html</a>
+<a href="/posts.html">5. 아무 말 대잔치 /posts.html</a>
+<a href="./posts.html">6. 아무 말 대잔치 ./posts.html</a>
+```
+
+1. `href="posts"`: 이동 X, 라우터 진입, url은 `domain/posts/posts`입니다.
+2. `href="/posts"`: 이동 O, 라우터 진입, url은 `domain/posts`입니다.
+3. `href="./posts"`: 이동 X, 라우터 진입, url은 `domain/posts/posts`입니다.
+4. `href="posts.html"`: 이동 X, 라우터 진입, url은 `domain/posts/posts.html`입니다.
+5. `href="/posts.html"`: 이동 O 라우터 진입 X, url은 `domain/posts.html`입니다.
+6. `href="./posts.html"`: 이동 X,  라우터 진입, url은 `domain/posts/posts.html`입니다.
+
+`/`를 사용하지 않거나, `./`을 사용하면 상대 경로, `/`을 사용하면 절대 경로 즉, root에서 진입하는 것을 알 수 있었습니다. 또한 5번과 같이 사용하면 정적 파일로 제공되는 것을 확인할 수 있었습니다.
+
 ### 오늘의 도전 과제와 해결 방법
 
 ### 오늘의 회고
